# invoice-matcher

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  Dockerfile.timetable  README.md  fly.timetable.toml  pyproject.toml  railway.toml  requirements.txt  tools
.claude/: CLAUDE.md  settings.local.json
apps/: __init__.py
apps/dev_workflow/: routes.py
apps/knowledge_base/: CLAUDE.md  indexer.py  linker.py  search.py  synthesizer.py
apps/local_kb/: CLAUDE.md  routes.py
apps/scheduler/: CLAUDE.md  __init__.py  routes.py
apps/socratic_bot/: CLAUDE.md  __init__.py  debate.py  modes.py  scorer.py
apps/speaking_coach/: CLAUDE.md  __init__.py  evaluator.py  progress.py  scenarios.py  session.py
apps/telegram_bridge/: CLAUDE.md  routes.py
apps/voice_input/: CLAUDE.md  __init__.py  recorder.py  refiner.py
docs/: CLAUDE.md  TOOLS-GUIDE.md  getting-started.md
docs/plans/: 2026-03-06-claude-scheduler-v1-implementation.md  2026-03-06-claude-scheduler-v1-product-design.md  2026-03-06-workspace-domain-provisioner.md  2026-03-07-family-timetable-design.md  2026-03-07-family-timetable-implementation.md  2026-03-07-invoice-matcher.md  2026-03-07-money-making-ideas-design.md  2026-03-07-pm-ai-era-course-design.md  2026-03-07-pm-ai-era-implementation.md  CLAUDE.md  (+5 more)
examples/: daily-code-review.task  log-summarizer.task  weekly-dep-audit.task
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
invoice-matcher/: .gitignore  README.md  pyproject.toml
invoice-matcher/src/invoice_matcher/: __init__.py  app.py  gemini.py
invoice-matcher/tests/: test_app.py  test_edge_cases.py  test_gemini.py  test_gemini_live.py  test_matcher.py
scripts/: migrate_pipeline_runs.py  setup_sheets.py
server/: CLAUDE.md  __init__.py  config.py  main.py
tests/: CLAUDE.md  conftest.py  create_test_fixtures.py  test_app.py  test_cli_workflow.py  test_db.py  test_demo.py  test_edge_cases.py  test_executor.py  test_gateway_audit.py  test_gateway_middleware.py  test_gateway_policy.py  test_gemini.py  test_integration.py  test_journal.py  test_knowledge_base.py  test_orchestrator.py  test_parser.py  test_phase1_integration.py  test_remediate.py  test_retry.py  test_socratic_bot.py  test_sop_converter.py  test_speaking_coach.py  test_timetable_api.py  test_timetable_auth.py  test_timetable_e2e.py  test_timetable_new_features.py  test_timetable_routes.py  test_timetable_service.py  test_timetable_sheets.py  test_workflow_models.py  test_workflow_parser.py  test_workflow_runner.py
workspace-provisioner/: .env.example  .gitignore  provision.py  pyproject.toml  requirements.txt
workspace-provisioner/.credentials/: key.txt
(+209 files in other folders)
