[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoice-matcher"
version = "0.1.0"
description = "Match and rename invoice PDFs using Gemini AI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[project.scripts]
invoice-matcher = "invoice_matcher.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_matcher"]
